--- a/src/main/webapp/fileUpload.html
+++ b/src/main/webapp/fileUpload.html
@@ -1,3 +1,7 @@
+<!--
+ファイルアップロードのサンプル
+fileUpload.html -> FileUpload.java -> preview.jsp 
+-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,7 +11,7 @@
 <body>
     <h2>ファイルを選択してアップロード</h2>
     <!-- enctypeは必須 -->
-<form action="FileUpload" method="POST" enctype="multipart/form-data">
+	<form action="FileUpload" method="POST" enctype="multipart/form-data">
         <input type="file" name="uploadFile" />
         <input type="submit" value="アップロード" />
     </form>
