Loggerによるログ出力を追加

--- a/src/main/webapp/fileUpload.html
+++ b/src/main/webapp/fileUpload.html
@@ -11,7 +11,7 @@ fileUpload.html -> FileUpload.java -> preview.jsp
 <body>
     <h2>ファイルを選択してアップロード</h2>
     <!-- enctypeは必須 -->
-	<form action="FileUpload" method="POST" enctype="multipart/form-data">
+	<form action="/FileUpload/FileUpload" method="POST" enctype="multipart/form-data">
         <input type="file" name="uploadFile" />
         <input type="submit" value="アップロード" />
     </form>
